--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,13 @@ dependencies {
     implementation "io.coil-kt:coil:$coil_version"
     implementation("io.coil-kt:coil-svg:$coil_version")
 
+    // camera
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
 
+    implementation "androidx.camera:camera-view:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+
+    implementation 'com.guolindev.permissionx:permissionx:1.7.1'
     testImplementation 'junit:junit:4.13.2'
 
     testImplementation "org.robolectric:robolectric:4.9.1"
