--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext{
         nav_version = "2.5.3"
         coil_version = '2.2.1'
+        camerax_version = '1.3.0-alpha02'
 
     }
 
