--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         nav_version = "2.5.3"
         coil_version = '2.2.1'
         camerax_version = '1.3.0-alpha02'
+        kotlin_version = '1.8.0'
 
     }
 
@@ -12,6 +13,10 @@ buildscript {
 //        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+    repositories {
+        mavenCentral()
     }
 }
 
