--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,12 +75,15 @@ dependencies {
 
     //api
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
 
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
     //Moshi
-    implementation 'com.squareup.moshi:moshi:1.12.0'
-    implementation "com.squareup.moshi:moshi-kotlin:1.12.0"
+    implementation 'com.squareup.moshi:moshi:1.14.0'
+    implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.14.0'
+
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+
 
     // leaks
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
