--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,9 +90,20 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
+    // room
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
+
+    // optional - Paging 3 Integration
+    implementation "androidx.room:room-paging:$room_version"
     // leaks
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
+
+
+// optional - Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
 
     testImplementation 'junit:junit:4.13.2'
 
