--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         coil_version = '2.2.1'
         camerax_version = '1.3.0-alpha02'
         kotlin_version = '1.8.0'
-
+        room_version = "2.5.0"
     }
 
     dependencies {
