--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,7 +115,17 @@ dependencies {
     implementation 'id.zelory:compressor:3.0.1'
     implementation 'com.github.Shouheng88:compressor:1.6.0'
 
+    // image
 
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
+// load with glide
+    implementation 'com.github.piasy:GlideImageLoader:1.8.1'
+    implementation 'com.github.piasy:BigImageViewer:1.8.1'
+
+// support thumbnail and gif with Glide
+    implementation 'com.github.piasy:GlideImageViewFactory:1.8.1'
     // leaks
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 
