--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,7 @@ kapt {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+//    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.8.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -69,6 +69,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.44"
     implementation 'androidx.core:core-ktx:+'
     kapt "com.google.dagger:hilt-compiler:2.44"
+    implementation 'androidx.core:core-splashscreen:1.0.0'
 
     //Coil
     implementation "io.coil-kt:coil:$coil_version"
