--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,11 @@ buildscript {
 
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // Make sure that you have the Google services Gradle plugin dependency
+        classpath 'com.google.gms:google-services:4.3.15'
+
+        // Add the dependency for the Crashlytics Gradle plugin
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.4'
     }
     repositories {
         mavenCentral()
