--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,12 @@ android {
         viewBinding true
         dataBinding true
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 // Allow references to generated code
@@ -65,14 +71,16 @@ kapt {
 dependencies {
 
 //    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.8.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
     implementation "com.google.dagger:hilt-android:2.44"
-    implementation 'androidx.core:core-ktx:+'
+    implementation 'androidx.core:core-ktx:1.9.0'
+//
+//    implementation 'androidx.core:core-ktx:+'
     kapt "com.google.dagger:hilt-compiler:2.44"
     implementation 'androidx.core:core-splashscreen:1.0.0'
 
@@ -148,9 +156,18 @@ dependencies {
 
 
     testImplementation 'junit:junit:4.13.2'
-
-    testImplementation "org.robolectric:robolectric:4.9.1"
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.6'
     testImplementation "androidx.test.ext:junit-ktx:1.1.5"
+    testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation "androidx.test.ext:truth:1.5.0"
+    testImplementation "io.mockk:mockk:1.13.4"
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation "org.robolectric:robolectric:4.9.2"
+
+    // For Robolectric tests.
+    testImplementation 'com.google.dagger:hilt-android-testing:2.44'
+    // ...with Kotlin.
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.44'
 
 
 // optional - Test helpers
