--- a/app/build.gradle
+++ b/app/build.gradle
@@ -164,6 +164,8 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:2.2.0"
     testImplementation "org.robolectric:robolectric:4.9.2"
 
+    // for retrofit
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
     // For Robolectric tests.
     testImplementation 'com.google.dagger:hilt-android-testing:2.44'
     // ...with Kotlin.
