added retrofit test

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -166,9 +166,12 @@ dependencies {
 
     // for retrofit
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
+    // for coroutine
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.0-Beta"
     // For Robolectric tests.
     testImplementation 'com.google.dagger:hilt-android-testing:2.44'
     // ...with Kotlin.
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.44'
     kaptTest 'com.google.dagger:hilt-android-compiler:2.44'
 
 
