--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ plugins {
     id 'com.google.firebase.crashlytics'
 }
 
+
+apply from: '../shared_dependencies.gradle'
+apply from: '../test_dependencies.gradle'
+
 def localPropertiesFile = rootProject.file("local.properties")
 def localProperties = new Properties()
 localProperties.load(new FileInputStream(localPropertiesFile))
@@ -64,9 +68,7 @@ android {
 }
 
 // Allow references to generated code
-kapt {
-    correctErrorTypes true
-}
+
 
 dependencies {
 
@@ -77,11 +79,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
-    implementation "com.google.dagger:hilt-android:2.44"
-    implementation 'androidx.core:core-ktx:1.9.0'
+//    implementation "com.google.dagger:hilt-android:2.44"
+//    implementation 'androidx.core:core-ktx:1.9.0'
 //
-//    implementation 'androidx.core:core-ktx:+'
-    kapt "com.google.dagger:hilt-compiler:2.44"
+//    kapt "com.google.dagger:hilt-compiler:2.44"
     implementation 'androidx.core:core-splashscreen:1.0.0'
 
     //Coil
@@ -154,33 +155,4 @@ dependencies {
 
 
 
-
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.6'
-    testImplementation "androidx.test.ext:junit-ktx:1.1.5"
-    testImplementation "com.google.truth:truth:1.1.3"
-    testImplementation "androidx.test.ext:truth:1.5.0"
-    testImplementation "io.mockk:mockk:1.13.4"
-    testImplementation "androidx.arch.core:core-testing:2.2.0"
-    testImplementation "org.robolectric:robolectric:4.9.2"
-
-    // for retrofit
-    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
-    // for coroutine
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.0-Beta"
-    // For Robolectric tests.
-    testImplementation 'com.google.dagger:hilt-android-testing:2.44'
-    // ...with Kotlin.
-    kaptTest 'com.google.dagger:hilt-android-compiler:2.44'
-
-
-// optional - Test helpers
-    testImplementation "androidx.room:room-testing:$room_version"
-
-    // alternatively - without Android dependencies for tests
-    testImplementation "androidx.paging:paging-common:$paging_version"
-
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
