--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,5 @@ plugins {
     id 'com.android.library' version '7.4.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
 }
