--- a/.github/workflows/auto_commit.yml
+++ b/.github/workflows/auto_commit.yml
@@ -1,7 +1,7 @@
 name: Github Action with a cronjob trigger
 on:
-  schedule:
-    - cron: "0 10 * * *"
+#   schedule:
+#     - cron: "0 10 * * *"
   workflow_dispatch:
 
 jobs:
