--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,11 +73,11 @@ android {
 dependencies {
 
 //    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0-alpha04'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.8.3'
 
 //    implementation "com.google.dagger:hilt-android:2.44"
 //    implementation 'androidx.core:core-ktx:1.9.0'
@@ -106,9 +106,9 @@ dependencies {
 
     implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
     //Moshi
-    implementation 'com.squareup.moshi:moshi:1.14.0'
-    implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.14.0'
+    implementation 'com.squareup.moshi:moshi:1.15.0'
+    implementation "com.squareup.moshi:moshi-kotlin:1.15.0"
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.15.0'
 
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     // paging Data
@@ -143,7 +143,7 @@ dependencies {
     implementation 'com.github.piasy:GlideImageViewFactory:1.8.1'
 
     // Import the BoM for the Firebase platform
-    implementation platform('com.google.firebase:firebase-bom:31.2.2')
+    implementation platform('com.google.firebase:firebase-bom:33.5.1')
 
     // Add the dependencies for the Crashlytics and Analytics libraries
     // When using the BoM, you don't specify versions in Firebase library dependencies
