--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@ buildscript {
 
     ext{
         nav_version = "2.5.3"
-        coil_version = '2.2.1'
-        camerax_version = '1.3.0-alpha02'
+        coil_version = '2.6.0'
+        camerax_version = '1.3.4'
         kotlin_version = '1.8.0'
-        paging_version = "3.1.1"
-        room_version = "2.5.0"
+        paging_version = "3.3.2"
+        room_version = "2.6.1"
     }
 
     dependencies {
@@ -16,10 +16,10 @@ buildscript {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // Make sure that you have the Google services Gradle plugin dependency
-        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.gms:google-services:4.4.2'
 
         // Add the dependency for the Crashlytics Gradle plugin
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.6'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:3.0.2'
     }
     repositories {
         mavenCentral()
@@ -27,9 +27,9 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '7.4.1' apply false
-    id 'com.android.library' version '7.4.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
-    id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'com.android.application' version '8.7.1' apply false
+    id 'com.android.library' version '8.7.1' apply false
+    id 'org.jetbrains.kotlin.android' version '2.0.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.49' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
 }
