--- a/test_dependencies.gradle
+++ b/test_dependencies.gradle
@@ -11,21 +11,21 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.6'
-    testImplementation "androidx.test.ext:junit-ktx:1.1.5"
+    testImplementation "androidx.test.ext:junit-ktx:1.2.1"
     testImplementation "androidx.arch.core:core-testing:2.2.0"
 
     testImplementation "io.mockk:mockk:1.13.4"
     testImplementation "org.robolectric:robolectric:4.9.2"
 
 
-    testImplementation "androidx.test.ext:truth:1.5.0"
+    testImplementation "androidx.test.ext:truth:1.6.0"
     // truth assertion
     testImplementation "com.google.truth:truth:1.1.3"
 
     // for retrofit
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
     // for coroutine
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.0-Beta"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3"
     // For Robolectric tests.
     testImplementation 'com.google.dagger:hilt-android-testing:2.44'
     // ...with Kotlin.
@@ -39,6 +39,6 @@ dependencies {
     testImplementation "androidx.paging:paging-common:$paging_version"
 
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 }
