--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         nav_version = "2.5.3"
         coil_version = '2.6.0'
         camerax_version = '1.3.4'
-        kotlin_version = '1.8.0'
+        kotlin_version = '2.0.0'
         paging_version = "3.3.2"
         room_version = "2.6.1"
     }
@@ -32,4 +32,5 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '2.0.0' apply false
     id 'com.google.dagger.hilt.android' version '2.49' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
+    id("com.google.devtools.ksp") version "2.0.21-1.0.26" apply false
 }
